# zenith

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
server/: .env.example  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_create_users.py  0002_create_favourites.py  0002_create_fixtures.py  0003_create_followed_launches.py  0003_rename_external_id.py  0004_create_bets.py  0004_create_followed_missions.py
server/app/: main.py
server/app/core/: config.py
server/app/db/: redis.py  session.py
server/app/models/: bet.py  favourite.py  fixture.py  followed_launch.py  followed_mission.py  league.py  team.py  user.py
server/app/repositories/: bet.py  favourite.py  fixture.py  followed_launch.py  followed_mission.py  league.py  team.py  user.py
server/app/routers/: apod.py  asteroid.py  auth.py  bets.py  competitions.py  favourite.py  fixtures.py  followed_launch.py  health.py  iss.py  launch.py  mars.py
server/app/schemas/: apod.py  asteroid.py  auth.py  (+7 more)
server/tests/: conftest.py  test_apod_routes.py  test_apod_service.py  test_asteroid_routes.py  test_asteroid_service.py  test_auth.py  test_bet_evaluator.py  test_bets.py  test_cache.py  test_competitions.py  test_favourites.py  test_fixtures_route.py  test_followed_launch_routes.py  test_followed_launch_service.py  test_followed_launches.py  test_followed_missions.py  test_football_api.py  test_health.py  test_iss_routes.py  test_iss_service.py  test_launch_routes.py  test_launch_service.py  test_mars_routes.py  test_mars_service.py
(+164 files in other folders)
