[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenith-server"
version = "0.1.0"
description = "Zenith backend — space-exploration discovery API."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Martin Marinov" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic[email]>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2.0",
    "redis[hiredis]>=5.2,<6.0",
    "httpx>=0.27,<0.28",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<6.0",
    "slowapi>=0.1.9,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "aiosqlite>=0.20,<0.21",
    "fakeredis>=2.25,<3.0",
    "ruff>=0.7,<0.8",
    "black>=24.10,<25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "alembic/versions/.*"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
